Fixed header jump issue.

--- a/css/style.css
+++ b/css/style.css
@@ -6755,9 +6755,6 @@ h3 {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
 }
-.main-content {
-  margin: 63px 0 0 0;
-}
 .banner {
   background: #006093;
 }
